# slopgate

./: .envrc  .gitignore  .gitlab-ci.yml  .gitnexusrc  .impeccable.md  .repomixignore  AGENTS.md  CLAUDE.md  Makefile  PRODUCT.md  README.md  baselines.json  biome.json  mempalace.yaml  pyproject.toml  pyrefly-lint.json  quality_gate.toml  repomix.config.json  slopgate.code-workspace  slopgate.toml  slopstrat.md
.opencode/: lsp.json  oh-my-openagent.json
.serena/: project.yml
.zed/: settings.json
bundle/: README.md  manifest.yaml
dashboard/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright-fixture.ts  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: architecture.md  ci-cd-failure.md  control-ops.md  cutover.md  debugging.md  extension_guide.md  feedback-loop-handoff-2026-07-16.md  hook-state-test-matrix.md  optimize.md  pi-extension.md  rules_reference.md  session-tool-explorer-improvement-spec.md
fixtures/: feedback_loop_python_any.json
logs/: hook-state.json
scripts/: remove_windows_powershell_worktree.sh
tests/: __init__.py  cli_changed_tests_jsts_support.py  cli_changed_tests_support.py  conftest.py  engine_support.py  first_write_contract_support.py  harness_schema_support.py  hook_state_subprocess_support.py  hook_state_support.py  lint_paths_support.py  search_cli_support.py  semantic_retry_support.py  support.py  test_adapter_payload_properties.py  test_adapter_render_request_properties.py  test_adapters.py  test_ast_rules.py  test_async_and_claude_retry_public_api.py  test_boundary_logging_rule.py  test_bundle_link_scripts.py  test_bundle_prompt_sync.py  test_bundle_skill_routing.py  test_cli.py  test_cli_changed_tests.py  test_cli_changed_tests_jsts.py  test_cli_trust_regressions.py  test_codex_config_toml.py  test_config_enrichment_git_public_api.py  test_config_enrollment.py  test_config_helper_public_api.py  (+129 more)
(+903 files in other folders)
