[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slopgate"
version = "1.1.0"
description = "Global CLI guardrails engine for AI coding agents — Claude Code, Codex, OpenCode"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "trav" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tomli>=2.4.1",
    "typing-extensions>=4.15.0",
]

[project.scripts]
slopgate = "slopgate.cli:safe_main"
sgt = "slopgate.cli:safe_main"
vfc = "slopgate.cli:safe_main"
isx = "slopgate.cli:safe_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slopgate = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src", "."]
typeCheckingMode = "strict"

[tool.pyrefly]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
search_path = ["src", "."]
disable-search-path-heuristics = true
typeCheckingMode = "strict"

[tool.ty.environment]
python = ".venv"
python-version = "3.12"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "hypothesis>=6.155.1",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.13",
    "ty>=0.0.29",
]
